--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -67,6 +67,7 @@
 @import "./02_atoms/_a-input";
 @import "./02_atoms/_a-label";
 @import "./02_atoms/_a-points";
+@import "./02_atoms/_a-divider";
 
 // Molecules
 @import "./03_molecules/_m-primary-nav";
@@ -75,6 +76,7 @@
 @import "./03_molecules/_m-box";
 @import "./03_molecules/_m-list";
 @import "./03_molecules/_m-form";
+@import "./03_molecules/_m-white-box";
 
 // Organisms
 @import "./04_organisms/_o-hello";
