--- a/src/styles/01_base/_variables.scss
+++ b/src/styles/01_base/_variables.scss
@@ -14,7 +14,7 @@ $gray-200: #EAEAEA;
 $gray-300: #dee2e6;
 $gray-400: #ced4da;
 $gray-500: #adb5bd;
-$gray-600: #D0D3DB;
+$gray-600: #D3D3D3;
 $gray-700: #495057;
 $gray-800: #2C2C2C;
 $gray-900: #141423;
