--- a/src/styles/04_organisms/_o-hero.scss
+++ b/src/styles/04_organisms/_o-hero.scss
@@ -7,12 +7,15 @@
   position: relative;
 
   &--dark {
-    background-color: $black;
+    background-color: $gray-800;
 
     #{$root}__figure {
 
       &::before {
-        background-image: linear-gradient(270deg, $black 0%, rgba($black, 0) 100%);
+        background-image: linear-gradient(270deg, $gray-800 0%, rgba($gray-800, 0) 100%);
+      }
+      &::after {
+        background-color: $gray-800;
       }
     }
   }
@@ -35,11 +38,13 @@
 
     @include media-breakpoint-down(md) {
       font-size: 3rem;
+      line-height: 60px;
     }
 
     font-size: 5rem;
     color: $white;
     margin-bottom: 50px;
+    line-height: 90px;
 
     > span {
       @supports (-webkit-text-stroke: 1px $white) {
@@ -84,5 +89,17 @@
       content: "";
       background-image: linear-gradient(270deg, $blue 0%, rgba($blue, 0) 100%);
     }
+
+    &::after {
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      right: 0;
+      left: 0;
+      content: "";
+      background-color: $blue;
+      opacity: 0.2;
+    }
   }
 }
+
