--- a/www/css/bundle.css
+++ b/www/css/bundle.css
@@ -42,7 +42,7 @@
   --bs-black-rgb: 0, 0, 0;
   --bs-body-color-rgb: 20, 20, 35;
   --bs-body-bg-rgb: 255, 255, 255;
-  --bs-font-sans-serif: "Open Sans", sans-serif;
+  --bs-font-sans-serif: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   --bs-font-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
   --bs-gradient: linear-gradient(180deg, rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0));
   --bs-body-font-family: var(--bs-font-sans-serif);
@@ -93,7 +93,7 @@ hr:not([size]) {
 h6, .h6, h5, .h5, h4, .h4, h3, .h3, h2, .h2, h1, .h1 {
   margin-top: 0;
   margin-bottom: 0.5rem;
-  font-family: "Syncopate", "Open Sans", sans-serif;
+  font-family: "Syncopate", system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   font-weight: 400;
   line-height: 1.2;
 }
@@ -3647,6 +3647,184 @@ textarea.form-control-lg {
 .navbar-dark .navbar-text a:hover,
 .navbar-dark .navbar-text a:focus {
   color: #fff;
+}
+
+.valid-feedback {
+  display: none;
+  width: 100%;
+  margin-top: 0.25rem;
+  font-size: 0.875em;
+  color: #198754;
+}
+
+.valid-tooltip {
+  position: absolute;
+  top: 100%;
+  z-index: 5;
+  display: none;
+  max-width: 100%;
+  padding: 0.25rem 0.5rem;
+  margin-top: 0.1rem;
+  font-size: 0.875rem;
+  color: #fff;
+  background-color: rgba(25, 135, 84, 0.9);
+  border-radius: 0.25rem;
+}
+
+.was-validated :valid ~ .valid-feedback,
+.was-validated :valid ~ .valid-tooltip,
+.is-valid ~ .valid-feedback,
+.is-valid ~ .valid-tooltip {
+  display: block;
+}
+
+.was-validated .form-control:valid, .form-control.is-valid {
+  border-color: #198754;
+  padding-right: calc(1.5em + 0.75rem);
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3e%3cpath fill='%23198754' d='M2.3 6.73L.6 4.53c-.4-1.04.46-1.4 1.1-.8l1.1 1.4 3.4-3.8c.6-.63 1.6-.27 1.2.7l-4 4.6c-.43.5-.8.4-1.1.1z'/%3e%3c/svg%3e");
+  background-repeat: no-repeat;
+  background-position: right calc(0.375em + 0.1875rem) center;
+  background-size: calc(0.75em + 0.375rem) calc(0.75em + 0.375rem);
+}
+.was-validated .form-control:valid:focus, .form-control.is-valid:focus {
+  border-color: #198754;
+  box-shadow: 0 0 0 0.25rem rgba(25, 135, 84, 0.25);
+}
+
+.was-validated textarea.form-control:valid, textarea.form-control.is-valid {
+  padding-right: calc(1.5em + 0.75rem);
+  background-position: top calc(0.375em + 0.1875rem) right calc(0.375em + 0.1875rem);
+}
+
+.was-validated .form-select:valid, .form-select.is-valid {
+  border-color: #198754;
+}
+.was-validated .form-select:valid:not([multiple]):not([size]), .was-validated .form-select:valid:not([multiple])[size="1"], .form-select.is-valid:not([multiple]):not([size]), .form-select.is-valid:not([multiple])[size="1"] {
+  padding-right: 4.125rem;
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='%232C2C2C' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M2 5l6 6 6-6'/%3e%3c/svg%3e"), url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3e%3cpath fill='%23198754' d='M2.3 6.73L.6 4.53c-.4-1.04.46-1.4 1.1-.8l1.1 1.4 3.4-3.8c.6-.63 1.6-.27 1.2.7l-4 4.6c-.43.5-.8.4-1.1.1z'/%3e%3c/svg%3e");
+  background-position: right 0.75rem center, center right 2.25rem;
+  background-size: 16px 12px, calc(0.75em + 0.375rem) calc(0.75em + 0.375rem);
+}
+.was-validated .form-select:valid:focus, .form-select.is-valid:focus {
+  border-color: #198754;
+  box-shadow: 0 0 0 0.25rem rgba(25, 135, 84, 0.25);
+}
+
+.was-validated .form-check-input:valid, .form-check-input.is-valid {
+  border-color: #198754;
+}
+.was-validated .form-check-input:valid:checked, .form-check-input.is-valid:checked {
+  background-color: #198754;
+}
+.was-validated .form-check-input:valid:focus, .form-check-input.is-valid:focus {
+  box-shadow: 0 0 0 0.25rem rgba(25, 135, 84, 0.25);
+}
+.was-validated .form-check-input:valid ~ .form-check-label, .form-check-input.is-valid ~ .form-check-label {
+  color: #198754;
+}
+
+.form-check-inline .form-check-input ~ .valid-feedback {
+  margin-left: 0.5em;
+}
+
+.was-validated .input-group .form-control:valid, .input-group .form-control.is-valid,
+.was-validated .input-group .form-select:valid,
+.input-group .form-select.is-valid {
+  z-index: 1;
+}
+.was-validated .input-group .form-control:valid:focus, .input-group .form-control.is-valid:focus,
+.was-validated .input-group .form-select:valid:focus,
+.input-group .form-select.is-valid:focus {
+  z-index: 3;
+}
+
+.invalid-feedback {
+  display: none;
+  width: 100%;
+  margin-top: 0.25rem;
+  font-size: 0.875em;
+  color: #dc3545;
+}
+
+.invalid-tooltip {
+  position: absolute;
+  top: 100%;
+  z-index: 5;
+  display: none;
+  max-width: 100%;
+  padding: 0.25rem 0.5rem;
+  margin-top: 0.1rem;
+  font-size: 0.875rem;
+  color: #fff;
+  background-color: rgba(220, 53, 69, 0.9);
+  border-radius: 0.25rem;
+}
+
+.was-validated :invalid ~ .invalid-feedback,
+.was-validated :invalid ~ .invalid-tooltip,
+.is-invalid ~ .invalid-feedback,
+.is-invalid ~ .invalid-tooltip {
+  display: block;
+}
+
+.was-validated .form-control:invalid, .form-control.is-invalid {
+  border-color: #dc3545;
+  padding-right: calc(1.5em + 0.75rem);
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 12 12' width='12' height='12' fill='none' stroke='%23dc3545'%3e%3ccircle cx='6' cy='6' r='4.5'/%3e%3cpath stroke-linejoin='round' d='M5.8 3.6h.4L6 6.5z'/%3e%3ccircle cx='6' cy='8.2' r='.6' fill='%23dc3545' stroke='none'/%3e%3c/svg%3e");
+  background-repeat: no-repeat;
+  background-position: right calc(0.375em + 0.1875rem) center;
+  background-size: calc(0.75em + 0.375rem) calc(0.75em + 0.375rem);
+}
+.was-validated .form-control:invalid:focus, .form-control.is-invalid:focus {
+  border-color: #dc3545;
+  box-shadow: 0 0 0 0.25rem rgba(220, 53, 69, 0.25);
+}
+
+.was-validated textarea.form-control:invalid, textarea.form-control.is-invalid {
+  padding-right: calc(1.5em + 0.75rem);
+  background-position: top calc(0.375em + 0.1875rem) right calc(0.375em + 0.1875rem);
+}
+
+.was-validated .form-select:invalid, .form-select.is-invalid {
+  border-color: #dc3545;
+}
+.was-validated .form-select:invalid:not([multiple]):not([size]), .was-validated .form-select:invalid:not([multiple])[size="1"], .form-select.is-invalid:not([multiple]):not([size]), .form-select.is-invalid:not([multiple])[size="1"] {
+  padding-right: 4.125rem;
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='%232C2C2C' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M2 5l6 6 6-6'/%3e%3c/svg%3e"), url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 12 12' width='12' height='12' fill='none' stroke='%23dc3545'%3e%3ccircle cx='6' cy='6' r='4.5'/%3e%3cpath stroke-linejoin='round' d='M5.8 3.6h.4L6 6.5z'/%3e%3ccircle cx='6' cy='8.2' r='.6' fill='%23dc3545' stroke='none'/%3e%3c/svg%3e");
+  background-position: right 0.75rem center, center right 2.25rem;
+  background-size: 16px 12px, calc(0.75em + 0.375rem) calc(0.75em + 0.375rem);
+}
+.was-validated .form-select:invalid:focus, .form-select.is-invalid:focus {
+  border-color: #dc3545;
+  box-shadow: 0 0 0 0.25rem rgba(220, 53, 69, 0.25);
+}
+
+.was-validated .form-check-input:invalid, .form-check-input.is-invalid {
+  border-color: #dc3545;
+}
+.was-validated .form-check-input:invalid:checked, .form-check-input.is-invalid:checked {
+  background-color: #dc3545;
+}
+.was-validated .form-check-input:invalid:focus, .form-check-input.is-invalid:focus {
+  box-shadow: 0 0 0 0.25rem rgba(220, 53, 69, 0.25);
+}
+.was-validated .form-check-input:invalid ~ .form-check-label, .form-check-input.is-invalid ~ .form-check-label {
+  color: #dc3545;
+}
+
+.form-check-inline .form-check-input ~ .invalid-feedback {
+  margin-left: 0.5em;
+}
+
+.was-validated .input-group .form-control:invalid, .input-group .form-control.is-invalid,
+.was-validated .input-group .form-select:invalid,
+.input-group .form-select.is-invalid {
+  z-index: 2;
+}
+.was-validated .input-group .form-control:invalid:focus, .input-group .form-control.is-invalid:focus,
+.was-validated .input-group .form-select:invalid:focus,
+.input-group .form-select.is-invalid:focus {
+  z-index: 3;
 }
 
 .clearfix::after {
@@ -8527,7 +8705,7 @@ textarea.form-control-lg {
   align-items: center;
   gap: 2rem;
   text-transform: uppercase;
-  font-family: "Syncopate", "Open Sans", sans-serif;
+  font-family: "Syncopate", system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   padding: 2rem 2.3125rem;
   border-radius: 0.9375rem;
   font-weight: 700;
@@ -8606,6 +8784,7 @@ textarea.form-control-lg {
 }
 .a-title--bold {
   font-weight: 700;
+  margin-bottom: 3.125rem;
 }
 .a-title--sm {
   font-size: 1.5625rem;
@@ -9521,7 +9700,7 @@ textarea.form-control-lg {
 }
 
 .a-scroll-link {
-  font-family: "Syncopate", "Open Sans", sans-serif;
+  font-family: "Syncopate", system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   text-decoration: none;
   font-weight: 700;
   color: #fff;
@@ -9602,12 +9781,17 @@ textarea.form-control-lg {
   max-width: 160px;
   height: auto;
 }
+@media (max-width: 767.98px) {
+  .a-icon {
+    max-width: 120px;
+  }
+}
 
 .a-more-link {
   display: inline-flex;
   font-size: 13px;
   text-transform: uppercase;
-  font-family: "Syncopate", "Open Sans", sans-serif;
+  font-family: "Syncopate", system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   font-weight: 700;
   align-items: center;
   text-decoration: none;
@@ -9785,6 +9969,56 @@ textarea.form-control-lg {
   height: 1px;
   width: 100%;
   background-color: #D3D3D3;
+}
+
+.a-table {
+  width: 100%;
+}
+.a-table__head {
+  color: rgba(44, 44, 44, 0.5);
+  font-size: 14px;
+  letter-spacing: 0;
+}
+.a-table__head th {
+  font-weight: 400;
+  border-bottom: 1px solid #D3D3D3;
+  padding-bottom: 14px;
+}
+@media (min-width: 768px) {
+  .a-table__head th {
+    padding-left: 30px;
+  }
+}
+.a-table__body tr {
+  border-bottom: 1px solid #D3D3D3;
+}
+.a-table__body td {
+  font-size: 14px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+@media (min-width: 768px) {
+  .a-table__body td {
+    line-height: 35px;
+    fon-size: 1rem;
+    padding-left: 30px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+  }
+}
+
+.a-figure {
+  margin: 0;
+}
+.a-figure__img {
+  width: 100%;
+}
+.a-figure__caption {
+  color: rgba(44, 44, 44, 0.5);
+  font-size: 14px;
+  text-align: right;
+  line-height: 19px;
+  margin-top: 25px;
 }
 
 @media (max-width: 991.98px) {
@@ -10168,13 +10402,24 @@ textarea.form-control-lg {
 }
 
 .m-white-box {
-  padding: 100px 130px;
+  padding: 6.25rem 8.125rem;
   background-color: #fff;
+}
+@media (max-width: 991.98px) {
+  .m-white-box {
+    padding-left: 2rem;
+    padding-right: 2rem;
+  }
 }
 .m-white-box__btn {
   display: flex;
   padding-top: 28px;
   padding-bottom: 28px;
+  border: 1px solid #EAEAEA;
+  font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-size: 1rem;
+  text-transform: unset;
+  font-weight: 400;
 }
 
 .o-hello {
@@ -10208,12 +10453,12 @@ textarea.form-control-lg {
 @media (min-width: 992px) {
   .o-hello__title {
     font-size: 8rem;
+    line-height: 155px;
   }
 }
 @media (min-width: 1200px) {
   .o-hello__title {
     font-size: 10rem;
-    line-height: 155px;
   }
 }
 @supports (-webkit-text-stroke: 1px #fff) {
@@ -10313,8 +10558,9 @@ textarea.form-control-lg {
 }
 @media (max-width: 767.98px) {
   .o-hero__title {
-    font-size: 3rem;
-    line-height: 60px;
+    font-size: 2rem;
+    line-height: 50px;
+    margin-bottom: 30px;
   }
 }
 @supports (-webkit-text-stroke: 1px #fff) {
@@ -10371,36 +10617,41 @@ textarea.form-control-lg {
 .o-section {
   padding: 9.375rem 0;
 }
+.o-section--light {
+  background-color: #EAEAEA;
+  color: #2C2C2C;
+}
+.o-section--xs {
+  padding: 4.0625rem 0;
+}
+.o-section__title {
+  margin-bottom: 5rem;
+}
 @media (min-width: 992px) {
   .o-section__title {
     font-size: 5rem;
+    line-height: 5.625rem;
   }
 }
 @media (max-width: 991.98px) {
   .o-section__title {
     font-size: 3rem;
+    line-height: 3.125rem;
   }
 }
 @media (max-width: 767.98px) {
   .o-section__title {
-    font-size: 2rem;
+    font-size: 2.5rem;
   }
-  .o-section__actions {
-    flex-direction: column;
-    align-items: center;
-  }
-}
-.o-section--light {
-  background-color: #EAEAEA;
-  color: #2C2C2C;
-}
-.o-section__title {
-  margin-bottom: 5rem;
-  line-height: 5.625rem;
 }
 .o-section__title--sm {
   font-size: 2.8125rem;
   margin-bottom: 2.5rem;
+}
+@media (max-width: 767.98px) {
+  .o-section__title--sm {
+    font-size: 2rem;
+  }
 }
 .o-section__name {
   font-size: 15px;
@@ -10420,6 +10671,12 @@ textarea.form-control-lg {
   justify-content: center;
   gap: 20px;
   margin-top: 5rem;
+}
+@media (max-width: 767.98px) {
+  .o-section__actions {
+    flex-direction: column;
+    align-items: center;
+  }
 }
 
 .o-header {
