--- a/src/styles/02_atoms/_a-title.scss
+++ b/src/styles/02_atoms/_a-title.scss
@@ -1,19 +1,15 @@
 .a-title {
-  // font-family: $font-family-secondary;
-  // font-weight: $font-weight-normal !important;
   font-size: 1.5625rem;
   line-height: 35px;
 
-
   > span {
     display: block;
-    font-weight: $font-weight-bold !important;
+    font-weight: $font-weight-bold;
 
     @supports (-webkit-text-stroke: 1px $black) {
       color: transparent;
       -webkit-text-stroke: 1px $black;
     }
-
     @supports not (-webkit-text-stroke: 1px $black) {
       color: $black;
     }
@@ -31,5 +27,24 @@
 
   &--xs {
     font-size: 15px;
+  }
+
+  &--primary {
+
+    > span {
+      @supports (-webkit-text-stroke: 1px $primary) {
+        color: transparent;
+        -webkit-text-stroke: 1px $primary;
+      }
+      @supports not (-webkit-text-stroke: 1px $primary) {
+        color: $primary;
+      }
+      @include media-breakpoint-down(md) {
+        font-size: 3.75rem;
+      }
+
+      font-size: 5rem;
+      margin-bottom: 40px;
+    }
   }
 }
