--- a/src/styles/02_atoms/_a-title.scss
+++ b/src/styles/02_atoms/_a-title.scss
@@ -29,6 +29,13 @@
     font-size: 15px;
   }
 
+  &--footer {
+    font-size: 14px;
+    font-family: 'Open Sans';
+    color: $white;
+    font-weight: $font-weight-bold;
+  }
+
   &--primary {
 
     > span {
