--- a/src/styles/04_organisms/_o-hero.scss
+++ b/src/styles/04_organisms/_o-hero.scss
@@ -1,7 +1,10 @@
 .o-hero {
   $root: &;
+  @include media-breakpoint-up(md) {
+    padding: 15rem 0;
+  }
 
-  padding: 200px 0;
+  padding: 10rem 0;
   background-color: $blue;
   color: $white;
   position: relative;
@@ -20,14 +23,60 @@
     }
   }
 
+  &--offset {
+    background: linear-gradient(to bottom, $gray-200 50%, $white 50%);
+    padding-top: 6.875rem;
+    padding-bottom: 20rem;
+
+    #{$root}__figure {
+      @include media-breakpoint-down(xl) {
+        width: 100%;
+      }
+      right: 0;
+      width: calc(100% - 80px);
+      margin: auto;
+      border-radius: 20px;
+      overflow: hidden;
+      max-width: 1600px;
+
+      img {
+        @include media-breakpoint-down(sm) {
+          object-position: bottom;
+        }
+
+        object-position: right;
+      }
+
+      &::after {
+        background: none;
+      }
+
+      &::before {
+        background-image: none;
+      }
+    }
+  }
+
   &--full {
 
     #{$root}__figure {
       right: 0;
       max-width: 100%;
 
+      img {
+        @include media-breakpoint-down(sm) {
+          object-position: bottom;
+        }
+
+        object-position: right;
+      }
+
       &::before {
         background-image: none;
+      }
+
+      &::after {
+        background: none;
       }
     }
   }
