--- a/src/styles/02_atoms/_a-input.scss
+++ b/src/styles/02_atoms/_a-input.scss
@@ -1,9 +1,11 @@
 .a-input {
+  $root: &;
   display: flex;
   min-width: 100%;
   padding: 1.8125rem;
   border: none;
   outline: none;
+  border-radius: 0;
 
   &:focus {
     box-shadow: none;
@@ -14,6 +16,21 @@
   }
 }
 
-.form-control {
-  border-radius: none !important;
+.was-validated .form-control:invalid, .form-control.is-invalid
+ {
+  border: 1px solid $primary;
+  background-image: none !important;
+}
+
+.was-validated .form-control:valid, .form-control.is-valid {
+  background-image: none !important;
+}
+
+.was-validated .form-control:invalid:focus, .form-control.is-invalid:focus,
+.was-validated .form-control:valid:focus, .form-control.is-valid:focus {
+  box-shadow: none;
+}
+
+.invalid-feedback {
+  color: $primary;
 }
