--- a/src/styles/04_organisms/_o-section.scss
+++ b/src/styles/04_organisms/_o-section.scss
@@ -1,13 +1,27 @@
+$section-padding-horizontal: 9.375rem;
+
 .o-section {
-  padding: 9.375rem 0;
+  padding: $section-padding-horizontal 0;
+  position: relative;
 
   &--light {
     background-color: $gray-200;
     color: $gray-800;
   }
 
+  &--offset {
+    @include media-breakpoint-up(xl) {
+      margin-top: calc(-#{$section-padding-horizontal} - 244px);
+      z-index: 2
+    }
+    @include media-breakpoint-down(lg) {
+      margin-top: calc(-#{$section-padding-horizontal});
+    }
+  }
+
   &--xs {
     padding: 4.0625rem 0;
+    margin: auto;
   }
 
   &__title {
@@ -20,7 +34,7 @@
         line-height: 3.125rem;
     }
     @include media-breakpoint-down(md) {
-        font-size: 2.5rem;
+        font-size: 2rem;
     }
 
     margin-bottom: 5rem;
@@ -60,5 +74,44 @@
     justify-content: center;
     gap: 20px;
     margin-top: 5rem;
+  }
+
+  &__figure {
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    z-index: 2;
+    border-radius: 20px;
+
+    img {
+      display: block;
+      width: 100%;
+      height: 100%;
+      -o-object-fit: cover;
+      object-fit: cover;
+    }
+
+    // &::before {
+    //   position: absolute;
+    //   top: 0;
+    //   bottom: 0;
+    //   right: 0;
+    //   left: 0;
+    //   content: "";
+    //   background-image: linear-gradient(270deg, $blue 0%, rgba($blue, 0) 100%);
+    // }
+
+    // &::after {
+    //   position: absolute;
+    //   top: 0;
+    //   bottom: 0;
+    //   right: 0;
+    //   left: 0;
+    //   content: "";
+    //   background-color: $blue;
+    //   opacity: 0.2;
+    // }
   }
 }
